@@ -1,9 +1,12 @@
 package io.laaf.fastcampusprojectboard.service;
 
+import io.laaf.fastcampusprojectboard.domain.Article;
 import io.laaf.fastcampusprojectboard.domain.ArticleComment;
+import io.laaf.fastcampusprojectboard.domain.UserAccount;
 import io.laaf.fastcampusprojectboard.dto.ArticleCommentDto;
 import io.laaf.fastcampusprojectboard.repository.ArticleCommentRepository;
 import io.laaf.fastcampusprojectboard.repository.ArticleRepository;
+import io.laaf.fastcampusprojectboard.repository.UserAccountRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -18,31 +21,33 @@ import java.util.stream.Collectors;
 @Transactional
 @Service
 public class ArticleCommentService {
+
     private final ArticleRepository articleRepository;
     private final ArticleCommentRepository articleCommentRepository;
+    private final UserAccountRepository userAccountRepository;
 
     @Transactional(readOnly = true)
     public List<ArticleCommentDto> searchArticleComments(Long articleId) {
         return articleCommentRepository.findByArticle_Id(articleId)
                 .stream()
                 .map(ArticleCommentDto::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void saveArticleComment(ArticleCommentDto dto) {
         try {
-            articleCommentRepository.save(dto.toEntity(articleRepository.getReferenceById(dto.articleId())));
+            Article article = articleRepository.getReferenceById(dto.articleId());
+            UserAccount userAccount = userAccountRepository.getReferenceById(dto.userAccountDto().userId());
+            articleCommentRepository.save(dto.toEntity(article, userAccount));
         } catch (EntityNotFoundException e) {
-            log.warn("댓글 저장 실패. 댓글의 게식르을 찾을 수 없습니다 - dto: {}", dto);
+            log.warn("댓글 저장 실패. 댓글 작성에 필요한 정보를 찾을 수 없습니다 - {}", e.getLocalizedMessage());
         }
     }
 
     public void updateArticleComment(ArticleCommentDto dto) {
         try {
             ArticleComment articleComment = articleCommentRepository.getReferenceById(dto.id());
-            if (dto.content() != null) {
-                articleComment.setContent(dto.content());
-            }
+            if (dto.content() != null) { articleComment.setContent(dto.content()); }
         } catch (EntityNotFoundException e) {
             log.warn("댓글 업데이트 실패. 댓글을 찾을 수 없습니다 - dto: {}", dto);
         }
@@ -51,4 +56,5 @@ public class ArticleCommentService {
     public void deleteArticleComment(Long articleCommentId) {
         articleCommentRepository.deleteById(articleCommentId);
     }
+
 }
